--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,6 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+  {% feed_meta %}
+  {% seo %}
 </head>
