--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-
+    {% feed_meta %}
+    {% seo %}
 <body>
   {% include header.html %}
   {{content}}
